[backend] feat(chaining): fixed comnination hash computation to use the full 128 bits instead of the 64 of a long conversion